学员列表添加科目二、科目三教练绑定按钮

--- a/publish/css/append.css
+++ b/publish/css/append.css
@@ -6,3 +6,10 @@ label.required:after { content: "*"; position: absolute; right: 5px; color: #FF5
 .layui-btn.layui-btn-primary {
     background-color: #fff;
 }
+
+.c-blur {
+    color: #01AAED
+}
+.c-blur:hover {
+    color: #01AAEDAA
+}
