--- a/views/carStudent/carStudentList.html
+++ b/views/carStudent/carStudentList.html
@@ -33,6 +33,24 @@
           {{#  } }}
           {% endraw %}
         </script>
+            <script type="text/html" id="trainerTwoTpl">
+                {% raw %}
+          {{#  if(d.trainerTwo){ }}
+                有教练
+          {{#  } else { }}
+            <a class="c-blur" href="JavaScript:void(0)">绑定教练</a>
+          {{#  } }}
+          {% endraw %}
+        </script>
+            <script type="text/html" id="trainerThreeTpl">
+                {% raw %}
+          {{#  if(d.trainerThree){ }}
+          有教练
+          {{#  } else { }}
+          <a class="c-blur" href="JavaScript:void(0)">绑定教练</a>
+          {{#  } }}
+          {% endraw %}
+        </script>
             <script type="text/html" id="table-content-list">
                 <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit"></i>查看</a>
                 <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="cost"><i class="layui-icon layui-icon-rmb
@@ -151,6 +169,15 @@
                     }, {
                         field: "carType",
                         title: "培训车型",
+                    }, {
+                        field: "trainerTwo",
+                        title: "科目二教练",
+                        templet: "#trainerTwoTpl"
+                    },
+                    {
+                        field: "trainerThree",
+                        title: "科目三教练",
+                        templet: "#trainerThreeTpl"
                     },
                     {
                         field: "registerDate",
