文案修改、版本号修改

--- a/views/carTrainer/carTrainerList.html
+++ b/views/carTrainer/carTrainerList.html
@@ -11,7 +11,7 @@
                     </div>
                 </div>
                 <div class="layui-inline">
-                        <label class="layui-form-label">证件类型</label>
+                        <label class="layui-form-label">状态</label>
                         <div class="layui-input-inline">
                             <select name="status" id="status">
                                 <option value="">全部</option>
