--- a/views/carTrainer/carTrainerForm.html
+++ b/views/carTrainer/carTrainerForm.html
@@ -20,15 +20,15 @@
         <div class="layui-inline">
             <label class="layui-form-label required">身份证</label>
             <div class="layui-input-inline">
-                <input type="text" name="card" value="{{carTrainer.card}}" lay-verify="identity"
-                    placeholder="" autocomplete="off" class="layui-input">
+                <input type="text" name="card" value="{{carTrainer.card}}" lay-verify="identity" placeholder=""
+                    autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-inline">
             <label class="layui-form-label required">手机号</label>
             <div class="layui-input-inline">
-                <input type="text" name="phone" value="{{carTrainer.phone}}" lay-verify="phone"
-                    placeholder="" autocomplete="off" class="layui-input">
+                <input type="text" name="phone" value="{{carTrainer.phone}}" lay-verify="phone" placeholder=""
+                    autocomplete="off" class="layui-input">
             </div>
         </div>
     </div>
@@ -45,10 +45,10 @@
         <div class="layui-inline">
             <label class="layui-form-label">培训科目</label>
             <div class="layui-input-block">
-                <input type="checkbox" name="subjects" title="科目一" value="科目一" {% if carTrainer.subjects &&
-                    carTrainer.subjects.includes('科目一') %} checked="checked" {% endif %}>
                 <input type="checkbox" name="subjects" title="科目二" value="科目二" {% if carTrainer.subjects &&
                     carTrainer.subjects.includes('科目二') %} checked="checked" {% endif %}>
+                <input type="checkbox" name="subjects" title="科目三" value="科目三" {% if carTrainer.subjects &&
+                    carTrainer.subjects.includes('科目三') %} checked="checked" {% endif %}>
             </div>
         </div>
     </div>
